Updated to version 1.1 Add options hash with ability to clear onsubmit, change html for notice dialog, add notice selector for pre-existing notice html, namespace all events.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="jquery.remember-state.js"></script>
   <script>
     $(function() {
-      $("form").rememberState("personal_info").submit(function() {
+      $("form").rememberState({ objName: "personal_info" }).submit(function() {
         localStorage.setObject("personal_info", $(this).serializeArray());
         return false;
       });
