--- a/test.html
+++ b/test.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>QUnit Test Suite</title>
-  <link rel="stylesheet" href="q/qunit.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script src="jquery.remember-state.js" type="text/javascript"></script>
-  <script type="text/javascript" src="q/qunit.js"></script>
+  <script type="text/javascript" src="qunit/qunit.js"></script>
   <script type="text/javascript" src="tests.js"></script>
 </head>
 <body>
