--- a/test.html
+++ b/test.html
@@ -3,10 +3,10 @@
 <head>
   <title>QUnit Test Suite</title>
   <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="jquery.remember-state.js" type="text/javascript"></script>
-  <script type="text/javascript" src="qunit/qunit.js"></script>
-  <script type="text/javascript" src="tests.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="jquery.remember-state.js"></script>
+  <script src="qunit/qunit.js"></script>
+  <script src="tests.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit Test Suite</h1>
