Checkboxes without value attributes are restored

--- a/test.html
+++ b/test.html
@@ -55,6 +55,11 @@
           <ul>
             <li>
               <label>
+                <input type="checkbox" id="checkbox_empty_value" name="checkbox_empty_value" />
+              </label>
+            </li>
+            <li>
+              <label>
                 <input type="checkbox" id="interests_video_games" name="video_games" value="Video games" />
                 Video games
               </label>
